Tests fixes